# sentrafi

./: .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 796d52a99a9b_remove_username_update_profile_fields.py  a4aa0f812f1e_add_profession_to_profiles.py  a76672931a33_remove_username_update_profile_fields.py  b7525f7d0389_create_users_profiles_financial_goals_.py  bc94519f502d_add_sync_batches_and_transactions_tables.py
backend/app/: config.py  database.py  main.py
backend/app/api/endpoints/: auth.py  documents.py  profile.py
backend/app/auth/: dependencies.py  jwt.py  schemas.py  security.py
backend/app/models/: __init__.py  documents.py  financial_goals.py  profile.py  sync_batch.py  transaction.py  user.py
backend/app/services/: pdf_extraction.py
cli/: README.md  pyproject.toml
cli/sentra/: config.py  main.py
cli/sentrafi/: config.py  main.py
cli/sentrafi/commands/: auth.py  init.py  profile.py
db/init/: 01-extensions.sql
